Bug 1568996 - Flush layout before calling nsFrameSelection::MoveCaret. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D47532

--HG--
extra : moz-landing-system : lando